# personel-chef-B-p

./: .env.example  .gitignore  FINAL_STATUS.md  Makefile  PROJECT_EXPLANATION.txt  QUICK_START.md  README.md  TEST_AGENT_API.py  TEST_ALL_FIXES.py  TEST_DIRECT_WORKFLOW.py  VERIFICATION_REPORT.py  agents-cli-manifest.yaml  auth.py  config.py  database.py  debug_conversation_handler.py  debug_meal_lookup.py  debug_meal_object.py  demo_all_features.py  demo_integrated_workflow.py  final_verification.py  main.py  meals_expansion.py  middleware.py  models.py  pyproject.toml  schemas.py  test_advanced_features.py  test_all_6_fixes.py  test_bug4_fix.py  test_bug4_unit.py  test_bugs_7_8.py  test_bugs_9_10.py  test_complete_fix.py  test_comprehensive_validation.py  test_dailyfood_fix.py  test_expanded_training.py  test_femini_fix.py  test_final_fix.py  test_final_integration.py  (+16 more)
.agent/: claude.md
kaggle_submission/: DATASET_DESCRIPTION.txt  KAGGLE_READY.txt  KAGGLE_UPLOAD_INSTRUCTIONS.txt  README.md  emotions_config.csv  interview_questions.json  kaggle_notebook.py  meals_database.csv
mcp_server/: meals_server.py
mood_to_meal_butler/: __init__.py  advanced_caching.py  agent.py  agent_butler_interview_fix.py  alert_rules_engine.py  alerting_system.py  api_convenience.py  api_endpoints.py  auth_middleware.py  batch_operations.py  cache_invalidation.py  caching_layer.py  cli_tool.py  config.py  config_manager.py  config_schema.yaml  constants.py  context_understanding.py  conversation_handler.py  conversation_training.py  cors_headers.py  data_export.py  database_optimization.py  deep_context_training.py  deep_context_training_25.py  deep_context_training_25_expanded.py  deep_context_training_25_expanded_FIXED.py  developer_api.py  enhancements.py  (+32 more)
(+41 files in other folders)
