[project]
name = "mood-to-meal-butler"
version = "0.1.0"
description = "Bếp — AI Butler ẩm thực học về bạn theo thời gian"
requires-python = ">=3.12"

dependencies = [
  # Google ADK 2.0 — framework chạy agent graph
  "google-adk>=2.0.0",
  
  # Google Gemini SDK — gọi Gemini 2.0 Flash để sinh text
  "google-genai>=1.0.0",
  
  # MCP framework — tạo MCP server với @mcp.tool() decorator
  "fastmcp>=2.0.0",
  
  # HTTP client — gọi Open-Meteo API lấy thời tiết
  "httpx>=0.27.0",
  
  # Đọc file .env vào os.environ
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Chỉ cần khi deploy Cloud Run (OPTIONAL)
cloud = [
  "opentelemetry-exporter-gcp-trace>=1.6.0",
  "opentelemetry-sdk>=1.25.0",
]

# Luôn cài khi dev
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

# Evaluation dependencies group
eval = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "google-cloud-aiplatform[evaluation]",
]

# Công cụ lint
lint = [
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901", "B006"]

[tool.ruff.lint.isort]
known-first-party = ["mood_to_meal_butler", "mcp_server"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["mood_to_meal_butler", "mcp_server"]
